--- a/EditarInformacionPersonal.html
+++ b/EditarInformacionPersonal.html
@@ -2,121 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Editar Información Personal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="css/common.css"/>
+    <link rel="stylesheet" type="text/css" href="css/perfil.css"/>
+
 
 </head>
-<style>
-    .navbar{
-        background-color: black;
-        border-color: transparent;
-    }
-    body {
-        height: 100%;
-        margin: 0;
-        background-color:white;
-
-    }
-
-    .navbar{
-        font-family: 'Roboto', sans-serif;
-    }
-
-    .nav > li > a:hover {
-        text-decoration: none ;
-        border-bottom: 2px solid #ffffff;
-    }
-
-    .nav > li:active {
-        background-color: transparent ;
-    }
-
-    .nav > li > a {
-        float: right;
-        display: block;
-        color: #ffffff;
-        text-align: center;
-        padding: 14px 16px 10px 16px;
-        text-decoration: none;
-        font-size: 17px;
-        font-family: 'Roboto', sans-serif;
-    }
-
-    .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
-        background-color: transparent;
-    }
-    .navbar-inverse .navbar-nav > li > a:focus, .navbar-inverse .navbar-nav > li > a:hover {
-        color: #fff;
-        background-color: transparent;
-    }
-	
-	/*****/
-	/**/
-	@media screen and (max-width: 767px) {
-  .row-offcanvas {
-    position: relative;
-    -webkit-transition: all .25s ease-out;
-         -o-transition: all .25s ease-out;
-            transition: all .25s ease-out;
-  }
-
-  .row-offcanvas-right {
-    right: 0;
-  }
-
-  .row-offcanvas-left {
-    left: 0;
-  }
-
-  .row-offcanvas-right
-  .sidebar-offcanvas {
-    right: -60%; /* 6 columns */
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: -60%; /* 6 columns */
-  }
-
-  .row-offcanvas-right.active {
-    right: 60%; /* 6 columns */
-  }
-
-  .row-offcanvas-left.active {
-    left: 60%; /* 6 columns */
-  }
-
-  .sidebar-offcanvas {
-    position: absolute;
-    top: 0;
-    width: 60%; /* 6 columns */
-  }
-}
- 
-
-</style>
 <body>
 
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg bg-transp font-roboto">
+    <div class="navbar-collapse">
         <ul class="nav navbar-nav">
-            <li><a href="#">Inicio</a></li>
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Categorias <span class="caret"></span></a>
+            <li class="dropdown nav-item"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Géneros <span
+                    class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Libros infantiles</a></li>
-                    <li><a href="#">Libros de ficción</a></li>
-                    <li><a href="#">Libros de psicología</a></li>
+                    <li><a href="#">Ciencia</a></li>
+                    <li><a href="#">Ficción y literatura</a></li>
+                    <li><a href="#">Finanzas e inversión</a></li>
+                    <li><a href="#">Historia</a></li>
+                    <li><a href="#">Informática y tecnología</a></li>
+                    <li><a href="#">Infantiles</a></li>
+                    <li><a href="#">Psicología</a></li>
                 </ul>
             </li>
-            <li><a href="#">Más populares </a></li>
-            <li><a href="#">Novedades </a></li>
+            <li class="nav-item"><a href="Index.html">Inicio </a></li>
+            <li class="nav-item"><a href="Index.html">Más populares </a></li>
+            <li class="nav-item"><a href="Index.html">Novedades </a></li>
+            <li class="nav-item"><a>Buscar</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Acceder</a></li>
+            <li class="nav-item"><a href="Index.html">Desconectarse</a></li>
         </ul>
     </div>
 </nav>
@@ -160,6 +80,7 @@
               <input class="form-control" value="" type="text">
             </div>
           </div>
+            <!--
           <div class="form-group">
             <label class="col-lg-3 control-label">Compañía:</label>
             <div class="col-lg-8">
@@ -182,14 +103,14 @@
                 </select>
               </div>
             </div>
-          </div>
+          </div>-->
          
           <div class="form-group">
             <label class="col-md-3 control-label"></label>
             <div class="col-md-8">
-              <input class="btn btn-primary" value="Guardar cambios" type="button">
+                <a href="Perfil.html"><input class="btn btn-primary" value="Guardar cambios" type="button"></a>
               <span></span>
-              <input class="btn btn-default" value="Cancelar" type="reset">
+                <a href="Perfil.html"><input class="btn btn-default" value="Cancelar" type="reset"></a>
             </div>
           </div>
         </form>
@@ -200,8 +121,8 @@
 
         <div class="col-xs-6 col-sm-3 col-sm-pull-9 sidebar-offcanvas" id="sidebar">
           <div class="list-group">
-            <a href="#" class="list-group-item">Información personal</a>
-            <a href="#" class="list-group-item active">Cuenta</a>
+            <a href="#" class="list-group-item active">Información personal</a>
+            <a href="EditarCuenta.html" class="list-group-item">Cuenta</a>
             <a href="#" class="list-group-item">Emails</a>
             <a href="#" class="list-group-item">Notificaciones</a>
             <a href="#" class="list-group-item">Privacidad</a>
