--- a/Perfil.html
+++ b/Perfil.html
@@ -41,46 +41,47 @@
 </nav>
 
 <div class="container-fluid">
-      <div class="row row-offcanvas row-offcanvas-right">
+    <div class="row row-offcanvas row-offcanvas-right">
         <div class="col-xs-12 col-sm-9 col-sm-push-4">
-          <p class="pull-right visible-xs">
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas" title="Toggle sidebar"><i class="fa fa-chevron-right"></i></button>
-          </p>
-          
-          
-		<!-- edit form column -->
-      <div class="col-md-9 personal-info">
-      		<h2>Perfil</h2>
-		<hr>
-		<div class="row">
-  			<div class="col-md-4">
-				 <img src="images/user.jpg" height="200" width="200">
-			</div>
-			<div class="col-md-4">
-				<h5>Nombre: nombre</h5>
-				<h5>Localidad: localidad</h5>
-				<h5>Edad: edad</h5>
-			</div>
-		</div>
-		<hr>
+            <p class="pull-right visible-xs">
+                <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas" title="Toggle sidebar"><i
+                        class="fa fa-chevron-right"></i></button>
+            </p>
 
-              <a href="EditarCuenta.html"><input class="btn btn-primary" value="Editar perfil" type="button" ></a>
-      </div>
+
+            <!-- edit form column -->
+            <div class="col-md-9 personal-info">
+                <h2>Perfil</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="images/user.jpg" height="200" width="200">
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Nombre: nombre</h5>
+                        <h5>Localidad: localidad</h5>
+                        <h5>Edad: edad</h5>
+                    </div>
+                </div>
+                <hr>
+
+                <a href="EditarCuenta.html"><input class="btn btn-primary" value="Editar perfil" type="button"></a>
+            </div>
 
 
         </div><!--/.col-xs-12.col-sm-9-->
 
         <div class="col-xs-6 col-sm-3 col-sm-pull-8 sidebar-offcanvas" id="sidebar">
-          <div class="list-group">
-            <a href="#" class="list-group-item active">Perfil</a>
-            <a href="PerfilBiblioteca.html" class="list-group-item">Tu biblioteca</a>
-            <a href="PerfilCriticas.html" class="list-group-item">Tu críticas</a>
-			<a href="PerfilPendientes.html" class="list-group-item">Lecturas pendientes</a>
+            <div class="list-group">
+                <a href="#" class="list-group-item active">Perfil</a>
+                <a href="PerfilBiblioteca.html" class="list-group-item">Tu biblioteca</a>
+                <a href="PerfilCriticas.html" class="list-group-item">Tu críticas</a>
+                <a href="PerfilPendientes.html" class="list-group-item">Lecturas pendientes</a>
 
-          </div>
+            </div>
         </div><!--/.sidebar-offcanvas-->
-      </div><!--/row-->
-    </div><!--/.container-->
+    </div><!--/row-->
+</div><!--/.container-->
 
 </body>
 </html>
