--- a/LibroExtendido.html
+++ b/LibroExtendido.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" type="text/css" href="css/libroextendido.css"/>
 
 
-
 </head>
 <body>
 
@@ -49,17 +48,15 @@
 </nav>
 
 
-
-
 <div class="book">
     <h2> Matar un ruiseñor </h2>
-    <a href="images/img1.jpg"><img src="images/img1.jpg" ></a>
+    <a href="images/img1.jpg"><img src="images/img1.jpg"></a>
     <div class="ficha">
         <p>
-            <b>Autor:</b>  Harper Lee <br>
+            <b>Autor:</b> Harper Lee <br>
             <b>Título original:</b> To Kill a Mockingbird<br>
             <b>Editorial:</b> J.B. Lippincott Co.<br>
-            <b>País:</b>	Estados Unidos<br>
+            <b>País:</b> Estados Unidos<br>
             <b>Fecha de publicación:</b> 11 de julio de 1960
         </p>
         <p>
@@ -82,7 +79,9 @@
 
     <button class="btn" type="button">Comprar</button>
 
-    <div class="hr"><hr /></div>    <!--linea divisoria-->
+    <div class="hr">
+        <hr/>
+    </div>    <!--linea divisoria-->
 
     <div class="descrip">
         <p> Matar un ruiseñor (título original en inglés: To Kill a Mockingbird)
@@ -110,7 +109,7 @@
 
 <div class="carrousel-element">
     <div class="carrousel-title">
-        <h1 >Libros relacionados</h1>
+        <h1>Libros relacionados</h1>
     </div>
 
     <div class='carrousel-element-container'>
@@ -157,7 +156,7 @@
 
 <div class="carrousel-element">
     <div class="carrousel-title">
-        <h1 >Del mismo autor</h1>
+        <h1>Del mismo autor</h1>
     </div>
 
     <div class='carrousel-element-container'>
@@ -201,7 +200,6 @@
         </div>
     </div>
 </div>
-
 
 
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
