--- a/PerfilCriticas.html
+++ b/PerfilCriticas.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Mis Criticas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="css/common.css"/>
-	<link rel="stylesheet" type="text/css" href="css/perfil.css"/>
+    <link rel="stylesheet" type="text/css" href="css/common.css"/>
+    <link rel="stylesheet" type="text/css" href="css/perfil.css"/>
 
 </head>
 
@@ -17,130 +17,142 @@
 
 
 <nav class="navbar navbar-expand-lg bg-transp font-roboto">
-	<div class="navbar-collapse">
-		<ul class="nav navbar-nav">
-			<li class="dropdown nav-item"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Géneros <span
-					class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li><a href="#">Ciencia</a></li>
-					<li><a href="#">Ficción y literatura</a></li>
-					<li><a href="#">Finanzas e inversión</a></li>
-					<li><a href="#">Historia</a></li>
-					<li><a href="#">Informática y tecnología</a></li>
-					<li><a href="#">Infantiles</a></li>
-					<li><a href="#">Psicología</a></li>
-				</ul>
-			</li>
-			<li class="nav-item"><a href="Index.html">Inicio </a></li>
-			<li class="nav-item"><a href="Index.html">Más populares </a></li>
-			<li class="nav-item"><a href="Index.html">Novedades </a></li>
-			<li class="nav-item"><a>Buscar</a></li>
-		</ul>
-		<ul class="nav navbar-nav navbar-right">
-			<li class="nav-item"><a href="Index.html">Desconectarse</a></li>
-		</ul>
-	</div>
+    <div class="navbar-collapse">
+        <ul class="nav navbar-nav">
+            <li class="dropdown nav-item"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Géneros <span
+                    class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Ciencia</a></li>
+                    <li><a href="#">Ficción y literatura</a></li>
+                    <li><a href="#">Finanzas e inversión</a></li>
+                    <li><a href="#">Historia</a></li>
+                    <li><a href="#">Informática y tecnología</a></li>
+                    <li><a href="#">Infantiles</a></li>
+                    <li><a href="#">Psicología</a></li>
+                </ul>
+            </li>
+            <li class="nav-item"><a href="Index.html">Inicio </a></li>
+            <li class="nav-item"><a href="Index.html">Más populares </a></li>
+            <li class="nav-item"><a href="Index.html">Novedades </a></li>
+            <li class="nav-item"><a>Buscar</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item"><a href="Index.html">Desconectarse</a></li>
+        </ul>
+    </div>
 </nav>
 <div class="container-fluid">
-      <div class="row row-offcanvas row-offcanvas-right">
+    <div class="row row-offcanvas row-offcanvas-right">
         <div class="col-xs-12 col-sm-9 col-sm-push-4">
-          <p class="pull-right visible-xs">
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas" title="Toggle sidebar"><i class="fa fa-chevron-right"></i></button>
-          </p>
-          
-          
-		<!-- edit form column -->
-    <div class="col-md-9 personal-info">
-      	<h2>Tus críticas</h2>
-		<hr>
-		<div class="row">
-			<form class="form-horizontal" role="form">
-				<div class="form-group">
-            		<div class="col-md-2">
-						<img src="images/img1.jpg" href="" height="120" width="95">
-					</div>
-					<div class="col-md-8">
-						<h4>Título</h4>						
-						<h5>Autor</h5>
-						<p>A goo book is something to be left for upcoming generations and this edition is very luxurious and worth of buying.
-							About concept itself there is no much to say (after all, it is well known bestseller) but definitely worth of reading.
-							Shipment was extremely fast! I ordered it to adress in Germany and was there in two days
-						<p>
-					</div>
-          		</div>
-				<hr>
-				<div class="form-group">
-            		<div class="col-md-2">
-						<img src="images/img1.jpg" href="" height="120" width="95">
-					</div>
-					<div class="col-md-8">
-						<h4>Título</h4>						
-						<h5>Autor</h5>
-						<p>A goo book is something to be left for upcoming generations and this edition is very luxurious and worth of buying.
-							About concept itself there is no much to say (after all, it is well known bestseller) but definitely worth of reading.
-							Shipment was extremely fast! I ordered it to adress in Germany and was there in two days
-						<p>
-					</div>
-          		</div>
-				<hr>
-				<div class="form-group">
-            		<div class="col-md-2">
-						<img src="images/img1.jpg" href="" height="120" width="95">
-					</div>
-					<div class="col-md-8">
-						<h4>Título</h4>						
-						<h5>Autor</h5>
-						<p>A goo book is something to be left for upcoming generations and this edition is very luxurious and worth of buying.
-							About concept itself there is no much to say (after all, it is well known bestseller) but definitely worth of reading.
-							Shipment was extremely fast! I ordered it to adress in Germany and was there in two days
-						<p>
-					</div>
-          		</div>
-				<hr>
-				<div class="form-group">
-            		<div class="col-md-2">
-						<img src="images/img1.jpg" href="" height="120" width="95">
-					</div>
-					<div class="col-md-8">
-						<h4>Título</h4>						
-						<h5>Autor</h5>
-						<p>A goo book is something to be left for upcoming generations and this edition is very luxurious and worth of buying.
-							About concept itself there is no much to say (after all, it is well known bestseller) but definitely worth of reading.
-							Shipment was extremely fast! I ordered it to adress in Germany and was there in two days
-						<p>
-					</div>
-          		</div>
+            <p class="pull-right visible-xs">
+                <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas" title="Toggle sidebar"><i
+                        class="fa fa-chevron-right"></i></button>
+            </p>
 
-			</form>
-		</div>
 
-		<nav aria-label="Page navigation example">
-  		<ul class="pagination">
-    		<li class="page-item"><a class="page-link" href="#">Previous</a></li>
-    		<li class="page-item"><a class="page-link" href="#">1</a></li>
-    		<li class="page-item"><a class="page-link" href="#">2</a></li>
-   	 		<li class="page-item"><a class="page-link" href="#">3</a></li>
-    		<li class="page-item"><a class="page-link" href="#">Next</a></li>
-  		</ul>
-		</nav>
+            <!-- edit form column -->
+            <div class="col-md-9 personal-info">
+                <h2>Tus críticas</h2>
+                <hr>
+                <div class="row">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <div class="col-md-2">
+                                <img src="images/img1.jpg" href="" height="120" width="95">
+                            </div>
+                            <div class="col-md-8">
+                                <h4>Título</h4>
+                                <h5>Autor</h5>
+                                <p>A goo book is something to be left for upcoming generations and this edition is very
+                                    luxurious and worth of buying.
+                                    About concept itself there is no much to say (after all, it is well known
+                                    bestseller) but definitely worth of reading.
+                                    Shipment was extremely fast! I ordered it to adress in Germany and was there in two
+                                    days
+                                <p>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="form-group">
+                            <div class="col-md-2">
+                                <img src="images/img1.jpg" href="" height="120" width="95">
+                            </div>
+                            <div class="col-md-8">
+                                <h4>Título</h4>
+                                <h5>Autor</h5>
+                                <p>A goo book is something to be left for upcoming generations and this edition is very
+                                    luxurious and worth of buying.
+                                    About concept itself there is no much to say (after all, it is well known
+                                    bestseller) but definitely worth of reading.
+                                    Shipment was extremely fast! I ordered it to adress in Germany and was there in two
+                                    days
+                                <p>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="form-group">
+                            <div class="col-md-2">
+                                <img src="images/img1.jpg" href="" height="120" width="95">
+                            </div>
+                            <div class="col-md-8">
+                                <h4>Título</h4>
+                                <h5>Autor</h5>
+                                <p>A goo book is something to be left for upcoming generations and this edition is very
+                                    luxurious and worth of buying.
+                                    About concept itself there is no much to say (after all, it is well known
+                                    bestseller) but definitely worth of reading.
+                                    Shipment was extremely fast! I ordered it to adress in Germany and was there in two
+                                    days
+                                <p>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="form-group">
+                            <div class="col-md-2">
+                                <img src="images/img1.jpg" href="" height="120" width="95">
+                            </div>
+                            <div class="col-md-8">
+                                <h4>Título</h4>
+                                <h5>Autor</h5>
+                                <p>A goo book is something to be left for upcoming generations and this edition is very
+                                    luxurious and worth of buying.
+                                    About concept itself there is no much to say (after all, it is well known
+                                    bestseller) but definitely worth of reading.
+                                    Shipment was extremely fast! I ordered it to adress in Germany and was there in two
+                                    days
+                                <p>
+                            </div>
+                        </div>
 
-	</div>
+                    </form>
+                </div>
 
-	
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                    </ul>
+                </nav>
+
+            </div>
+
+
         </div><!--/.col-xs-12.col-sm-9-->
 
         <div class="col-xs-6 col-sm-3 col-sm-pull-8 sidebar-offcanvas" id="sidebar">
-          <div class="list-group">
-			  <a href="Perfil.html" class="list-group-item">Perfil</a>
-			  <a href="PerfilBiblioteca.html" class="list-group-item">Tu biblioteca</a>
-			  <a href="#" class="list-group-item active">Tu críticas</a>
-			  <a href="PerfilPendientes.html" class="list-group-item">Lecturas pendientes</a>
+            <div class="list-group">
+                <a href="Perfil.html" class="list-group-item">Perfil</a>
+                <a href="PerfilBiblioteca.html" class="list-group-item">Tu biblioteca</a>
+                <a href="#" class="list-group-item active">Tu críticas</a>
+                <a href="PerfilPendientes.html" class="list-group-item">Lecturas pendientes</a>
 
-          </div>
+            </div>
         </div><!--/.sidebar-offcanvas-->
-      </div><!--/row-->
-    </div><!--/.container-->
-
+    </div><!--/row-->
+</div><!--/.container-->
 
 
 </body>
